# VSTK

./: CMakeLists.txt  Dockerfile  README.md  build.sh  package.xml  pixi.toml
config/: kitti.yaml  rt_config.yaml  rt_config_stereo.yaml  stereo_params.yaml
include/calib/: CameraCalibration.hpp
include/config/: CalibConfig.hpp  Config.hpp
include/core/: BagOfWordsEngine.hpp  Pipeline.hpp  Runtime.hpp  Triangulation.hpp  VisibilityGraph.hpp
include/engines/: CrossMatchingEngine.hpp
include/features/: FeatureExtractor.hpp  FeatureMatcher.hpp
include/io/: DataLoader.hpp  DiskIO.hpp  FilesystemIO.hpp  IOInterface.hpp  Persistence.hpp  Serializer.hpp
include/io/disk/: DiskLoader.hpp
include/io/ros/: RosDefs.hpp  RosLoader.hpp  RosPipeline.hpp  RosPublisher.hpp
include/kafka/: KafkaClient.hpp
include/pipelines/: StereoPipeline.hpp
include/protoimpl/: ImageSvc.hpp  RpcSvc.hpp
include/utils/: AsyncUtils.hpp  CvUtils.hpp  DataUtils.hpp  GenericUtils.hpp  Logger.hpp  ObjectLifecycle.hpp  OperationMetadata.hpp  TimerUtils.hpp  VstkTypes.hpp
protobuf/: image_svc.proto
protos/: image_svc.grpc.pb.cc  image_svc.grpc.pb.h  image_svc.pb.cc  image_svc.pb.h
scripts/: calib_reformat.py
src/: calib.cc  calib.cpp  main.cc  main.cpp  main_svc.cc  stereo_core.cc  stereo_publisher.cc
src/calib/: CameraCalibration.cc  CameraCalibration.cpp
src/config/: CalibConfig.cc  CalibConfig.cpp  Config.cc  Config.cpp
src/core/: Pipeline.cc  Runtime.cc  Traingulation.cc  Triangulation.cc  VisibilityGraph.cpp
src/features/: FeatureExtractor.cc  FeatureExtractor.cpp  FeatureMatcher.cc  FeatureMatcher.cpp
src/io/: DiskIO.cc  DiskIO.cpp  IOInterface.cc  Persistence.cc  Serializer.cc
src/io/disk/: DiskLoader.cpp
src/io/ros/: RosPipeline.cc  RosPublisher.cc
src/kafka/: KafkaClient.cpp
src/pipelines/: StereoPipeline.cc
src/protoimpl/: ImageSvc.cpp  RpcSvc.cc
src/utils/: AsyncUtils.cc  CvUtils.cc  DataUtils.cc  GenericUtils.cc  ObjectLifecycle.cpp  TimerUtils.cc  TimerUtils.cpp
